super admin : display reduction

--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -57,3 +57,17 @@ img, button {
     margin-right:10px;
     border-radius: 6px;
 }
+
+.tc-super-admin{
+  table{
+    th{
+      padding-bottom:3px;
+      text-align: center;
+    }
+    td{
+      border:1px solid #b0b0b0;
+      text-align: right;
+    }
+  }
+
+}
