Correct little typo in variable name.

--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -86,7 +86,7 @@
 
         <div class="row cr-profile-result">
             <div class="col-md-12">
-                <p>Puissance effaçable potentielle: {{ potentialReduction.averagePowerReductionl | numberToI18N: 0 }}
+                <p>Puissance effaçable potentielle: {{ potentialReduction.averagePowerReduction | numberToI18N: 0 }}
                     Watt</p>
 
                 <p>Mon Potentiel par jour sur la période 17h-20h: {{ potentialReduction.energyReduction | numberToI18N
