--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -22,13 +22,15 @@
 
         <div class="row cr-actions-content">
 
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-1">
+            <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-1"
+                 ng-class="{jj:true}">
                 <cr-topic
                     image="household/topics/topic_presence"
                     view="$/angular/views/household/actions/topics/actions-presence.html"
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-green"
                     label="topic.presence.label"
+                    ng-disabled="isActionTopicEmpty('presence')"
                     ></cr-topic>
             </div>
 
@@ -40,6 +42,7 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-blue"
                     label="topic.programs.label"
+                    ng-disabled="isActionTopicEmpty('programs')"
                     ></cr-topic>
             </div>
 
@@ -50,6 +53,7 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-red"
                     label="topic.heating.label"
+                    ng-disabled="isActionTopicEmpty('heating')"
                     ></cr-topic>
             </div>
 
@@ -60,6 +64,7 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-orange"
                     label="topic.lighting.label"
+                    ng-disabled="isActionTopicEmpty('lighting')"
                     ></cr-topic>
             </div>
 
@@ -70,6 +75,7 @@
                     controller="ModalTopicCtrl"
                     window-class="cr-theme-magenta"
                     label="topic.dinner.label"
+                    ng-disabled="isActionTopicEmpty('dinner')"
                     ></cr-topic>
             </div>
 
