--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -10,9 +10,14 @@
 @import "_cr-messenger";
 @import "_cr-mega-button";
 
-
 img, button {
     max-width: 100%;
+}
+
+.cr-centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .cr-master {
@@ -29,47 +34,45 @@ img, button {
     max-width: 120px;
 }
 
-
-.cr-error{
-  background-color: red;
-  color:white;
-  padding: 5px;
-  margin-top: 3px;
+.cr-error {
+    background-color: red;
+    color: white;
+    padding: 5px;
+    margin-top: 3px;
 }
-
-
-
 
 .tc-chart-js-legend {
     list-style-type: none;
     padding-left: 0px;
 }
+
 .tc-chart-js-legend li {
     display: block;
     float: left;
-    clear:both;
-    padding:10px;
+    clear: both;
+    padding: 10px;
 }
+
 .tc-chart-js-legend li span {
-    width:12px;
-    height:12px;
-    display:block;
-    float:left;
-    margin-top:4px;
-    margin-right:10px;
+    width: 12px;
+    height: 12px;
+    display: block;
+    float: left;
+    margin-top: 4px;
+    margin-right: 10px;
     border-radius: 6px;
 }
 
-.tc-super-admin{
-  table{
-    th{
-      padding-bottom:3px;
-      text-align: center;
+.tc-super-admin {
+    table {
+        th {
+            padding-bottom: 3px;
+            text-align: center;
+        }
+        td {
+            border: 1px solid #b0b0b0;
+            text-align: right;
+        }
     }
-    td{
-      border:1px solid #b0b0b0;
-      text-align: right;
-    }
-  }
 
 }
