--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -7,8 +7,8 @@
             <div class="col-md-6">
                 <h1 class="cr-profile-title">Ménage > Profil de consommation</h1>
             </div>
-            <div class="col-md-4 col-md-offset-8 cr-navigation">
-                <a class="cr-profile-login-link" ng-click="logout()" ng-show="isAuthenticated()"> Logout</a>
+            <div class="col-md-6">
+                <cr-login></cr-login>
             </div>
         </div>
 
@@ -95,9 +95,6 @@
             </div>
         </div>
 
-        <div class="row">
-            <nvd3 options='options' data='data'></nvd3>
-        </div>
 
     </div>
 
