--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -15,7 +15,7 @@
         <script src='@routes.Assets.at("components/bootstrap/dist/js/bootstrap.js")'></script>
         @* D3 *@
         <script src='@routes.Assets.at("components/d3/d3.min.js")'></script>
-        <script src='@routes.Assets.at("components/nvd3/nv.d3.min.js")'></script>
+        <script src='@routes.Assets.at("components/nvd3/nv.d3.js")'></script>
         @* Angular dependencies local *@
         <script src='@routes.Assets.at("components/angular/angular.js")'></script>
         <script src='@routes.Assets.at("components/angular-i18n/angular-locale_fr-fr.js")'></script>
