--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -6,6 +6,7 @@
             <div class="col-md-12">
 
                 <h1 ng-bind-html="'welcome.title' | translate"></h1>
+                <h2 ng-bind-html="'welcome.title2' | translate"></h2>
 
             </div>
         </div>
@@ -13,7 +14,7 @@
         <div class="row">
 
             <div class="col-md-4 col-md-offset-1">
-                <h3 ng-bind-html="'welcome.choose_message' | translate"></h3>
+                <h3 ng-bind-html="'welcome.intro' | translate"></h3>
 
                 <div class="well">
                     <button class="btn cr-theme-green cr-mega-button cr-centered" ng-click="toHouseHold()">
@@ -22,11 +23,14 @@
                     </button>
                     <br/>
                     <button class="btn cr-theme-orange cr-mega-button cr-centered"
+                            ng-disabled="true"
                             ng-click="alert('not implemented yet !')">
                         <i class="fa fa-building fa-2x"></i>
                         <span ng-bind-html="'generic.enterprise' | translate"></span>
                     </button>
                 </div>
+
+                <p ng-bind-html="'welcome.outro' | translate"></p>
             </div>
 
             <div class="col-md-4 col-md-offset-2">
