--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -9,6 +9,7 @@
 @import "_cr-actions";
 @import "_cr-messenger";
 @import "_cr-mega-button";
+@import "_cr-login";
 
 img, button {
     max-width: 100%;
