--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -10,6 +10,7 @@
 @import "_cr-messenger";
 @import "_cr-mega-button";
 @import "_cr-login";
+@import "_cr-tabs";
 
 img, button {
     max-width: 100%;
