--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -13,6 +13,8 @@
 
         <div class="row">
 
+
+
             <div class="col-md-4 col-md-offset-1">
                 <h3 ng-bind-html="'welcome.intro' | translate"></h3>
 
@@ -33,51 +35,60 @@
                 <p ng-bind-html="'welcome.outro' | translate"></p>
             </div>
 
-            <div class="col-md-4 col-md-offset-2">
+            <div class="col-md-5 col-md-offset-1">
 
-                <h2 ng-bind-html="'welcome.login_message' | translate"></h2>
 
-                <cr-question label="generic.emailAddress">
-                    <cr-text ng-model="loginParams.email" name="email"></cr-text>
-                </cr-question>
-                <cr-question label="generic.password">
-                    <cr-text ng-model="loginParams.password" name="password" type="password" ng-return="login()"></cr-text>
-                </cr-question>
-                <center>
-                    <button class="btn btn-small cr-mega-button" ng-click="login()">
-                        <i class="fa fa-sign-in"></i>
-                        <span ng-bind-html="'welcome.button.login' | translate"></span>
-                    </button>
-                </center>
+                <tabset justified="true">
+                    <tab>
+                        <tab-heading>
+                            <span ng-bind-html="'welcome.login_message' | translate"></span>
+                        </tab-heading>
+                        <cr-question label="generic.emailAddress">
+                            <cr-text ng-model="loginParams.email" name="email"></cr-text>
+                        </cr-question>
+                        <cr-question label="generic.password">
+                            <cr-text ng-model="loginParams.password" name="password" type="password" ng-return="login()"></cr-text>
+                        </cr-question>
+                        <center>
+                            <button class="btn btn-small cr-mega-button" ng-click="login()">
+                                <i class="fa fa-sign-in"></i>
+                                <span ng-bind-html="'welcome.button.login' | translate"></span>
+                            </button>
+                        </center>
+                    </tab>
 
-                <h3 ng-bind-html="'welcome.forgot_password' | translate"></h3>
+                    <tab>
+                        <tab-heading>
+                            <span ng-bind-html="'welcome.forgot_password' | translate"></span>
+                        </tab-heading>
+                        <p ng-bind-html="'welcome.forgot_password.desc' | translate"></p>
 
-                <p ng-bind-html="'welcome.forgot_password.desc' | translate"></p>
-
-                <cr-question label="generic.emailAddress">
-                    <cr-text ng-model="forgotPasswordParams.email" name="email"></cr-text>
-                </cr-question>
-                <center>
-                    <button class="btn btn-small cr-mega-button" ng-click="forgotPassword()">
-                        <i class="fa fa-gear"></i>
-                        <span ng-bind-html="'welcome.button.forgotPassword' | translate"></span>
-                    </button>
-                </center>
+                        <cr-question label="generic.emailAddress">
+                            <cr-text ng-model="forgotPasswordParams.email" name="email"></cr-text>
+                        </cr-question>
+                        <center>
+                            <button class="btn btn-small cr-mega-button" ng-click="forgotPassword()">
+                                <i class="fa fa-gear"></i>
+                                <span ng-bind-html="'welcome.button.forgotPassword' | translate"></span>
+                            </button>
+                        </center>
+                    </tab>
+                </tabset>
 
             </div>
         </div>
     </div>
 
-    <!-- Controls demo -->
-    <br/> <br/> <br/> <br/> <br/> <br/> <br/>
-    <hr/>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-left">
-                <a ui-sref="root.controlsDemo">Controls demo ></a>
-            </div>
-        </div>
-    </div>
+    <!--&lt;!&ndash; Controls demo &ndash;&gt;-->
+    <!--<br/> <br/> <br/> <br/> <br/> <br/> <br/>-->
+    <!--<hr/>-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-12 text-left">-->
+                <!--<a ui-sref="root.controlsDemo">Controls demo ></a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 
 </div>
