--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -31,6 +31,15 @@ img, button {
     overflow-y: auto;
 }
 
+
+.cr-intro {
+
+}
+
+.cr-outro {
+
+}
+
 .trip-content {
     white-space: normal;
     max-width: 120px;
