--- a/app/eu/factorx/citizens/angular/views/household/account/household-account.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/household-account.html
@@ -1,8 +1,6 @@
 <div class="cr-account">
     <div class="container">
 
-        <
-
         <div class="row cr-profile-header">
 
             <div class="col-md-6">
@@ -18,7 +16,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-12">
-                <h3 ng-bind-html="'register.intro' | translate"></h3>
+                <p class="cr-intro" ng-bind-html="'register.intro' | translate"></p>
             </div>
         </div>
 
@@ -161,7 +159,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h3 ng-bind-html="'register.outro' | translate"></h3>
+                <p class="cr-outo" ng-bind-html="'register.outro' | translate"></p>
             </div>
         </div>
 
