--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -17,7 +17,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-12">
-                <h3 ng-bind-html="'actions.intro' | translate"></h3>
+                <p class="cr-intro" ng-bind-html="'actions.intro' | translate"></p>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h3 ng-bind-html="'actions.outro' | translate"></h3>
+                <p class="cr-outro" ng-bind-html="'actions.outro' | translate"></p>
             </div>
         </div>
 
