--- a/app/eu/factorx/citizens/angular/views/household/results/household-results.html
+++ b/app/eu/factorx/citizens/angular/views/household/results/household-results.html
@@ -17,7 +17,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-12">
-                <h3 ng-bind-html="'results.intro' | translate"></h3>
+                <p class="cr-intro" ng-bind-html="'results.intro' | translate"></p>
             </div>
         </div>
 
@@ -38,11 +38,10 @@
         </div>
 
 
-
         <div class="row">
 
             <div class="col-md-12">
-                <h3 ng-bind-html="'result.outro' | translate"></h3>
+                <p class="cr-outro" ng-bind-html="'result.outro' | translate"></p>
             </div>
         </div>
 
