--- a/app/assets/_cr-login.less
+++ b/app/assets/_cr-login.less
@@ -2,5 +2,8 @@
     .cr-login-link {
         cursor: pointer;
         padding: 0.5em 0 0.5em 1em;
+        *{
+            margin-top: 1em;
+        }
     }
 }
