--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -123,36 +123,36 @@
             </div>
         </div>
 
-        <div class="row cr-profile-result">
-            <div class="col-md-12">
-                <p>Day 1 - Mon effectif en W: {{ effectiveReduction.reductions[0].averagePowerReduction }}</p>
+        <!--<div class="row cr-profile-result">-->
+            <!--<div class="col-md-12">-->
+                <!--<p>Day 1 - Mon effectif en W: {{ effectiveReduction.reductions[0].averagePowerReduction }}</p>-->
 
-                <p>Day 1 - Mon effectif en kWh par jour sur la période 17h-20h: {{
-                    effectiveReduction.reductions[0].energyReduction }}</p>
-            </div>
-            <div class="col-md-12">
-                <p>Day 2 - Mon effectif en W: {{ effectiveReduction.reductions[1].averagePowerReduction }}</p>
+                <!--<p>Day 1 - Mon effectif en kWh par jour sur la période 17h-20h: {{-->
+                    <!--effectiveReduction.reductions[0].energyReduction }}</p>-->
+            <!--</div>-->
+            <!--<div class="col-md-12">-->
+                <!--<p>Day 2 - Mon effectif en W: {{ effectiveReduction.reductions[1].averagePowerReduction }}</p>-->
 
-                <p>Day 2 - Mon effectif en kWh par jour sur la période 17h-20h: {{
-                    effectiveReduction.reductions[1].energyReduction }}</p>
-            </div>
-            <div class="col-md-12">
-                <p>Day 3 - Mon effectif en W: {{ effectiveReduction.reductions[2].averagePowerReduction }}</p>
+                <!--<p>Day 2 - Mon effectif en kWh par jour sur la période 17h-20h: {{-->
+                    <!--effectiveReduction.reductions[1].energyReduction }}</p>-->
+            <!--</div>-->
+            <!--<div class="col-md-12">-->
+                <!--<p>Day 3 - Mon effectif en W: {{ effectiveReduction.reductions[2].averagePowerReduction }}</p>-->
 
-                <p>Day 3 - Mon effectif en kWh par jour sur la période 17h-20h: {{
-                    effectiveReduction.reductions[2].energyReduction }}</p>
-            </div>
-            <div class="col-md-12">
-                <p>Day 4 - Mon effectif en W: {{ effectiveReduction.reductions[3].averagePowerReduction }}</p>
+                <!--<p>Day 3 - Mon effectif en kWh par jour sur la période 17h-20h: {{-->
+                    <!--effectiveReduction.reductions[2].energyReduction }}</p>-->
+            <!--</div>-->
+            <!--<div class="col-md-12">-->
+                <!--<p>Day 4 - Mon effectif en W: {{ effectiveReduction.reductions[3].averagePowerReduction }}</p>-->
 
-                <p>Day 4 - Mon effectif en kWh par jour sur la période 17h-20h: {{
-                    effectiveReduction.reductions[3].energyReduction }}</p>
-            </div>
-            <div class="col-md-12">
-                <button class="btn btn-primary" ng-click="getEffectiveReduction()">Refresh</button>
-            </div>
+                <!--<p>Day 4 - Mon effectif en kWh par jour sur la période 17h-20h: {{-->
+                    <!--effectiveReduction.reductions[3].energyReduction }}</p>-->
+            <!--</div>-->
+            <!--<div class="col-md-12">-->
+                <!--<button class="btn btn-primary" ng-click="getEffectiveReduction()">Refresh</button>-->
+            <!--</div>-->
 
-        </div>
+        <!--</div>-->
 
     </div>
 </div>
