--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -38,7 +38,7 @@
             <div class="col-md-5 col-md-offset-1">
 
 
-                <tabset justified="true">
+                <tabset>
                     <tab>
                         <tab-heading>
                             <span ng-bind-html="'welcome.login_message' | translate"></span>
