--- a/app/eu/factorx/citizens/angular/views/household/account/account-change-password.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/account-change-password.html
@@ -6,20 +6,17 @@
     <cr-question label="account.info.oldPassword">
         <cr-text ng-model="o.oldPassword" type="password" name="password"
                  ng-validation="validation.oldPassword"></cr-text>
-        <p class="cr-error" ng-show="validation.oldPassword.valid == false && noSubmitYet == false">
-            {{'account.errorMessage.password' | translate}}</p>
+        <p class="cr-error" ng-show="validation.oldPassword.valid == false && noSubmitYet == false" ng-bind-html="'account.errorMessage.password' | translate"></p>
     </cr-question>
     <cr-question label="account.info.newPassword">
         <cr-text ng-model="o.newPassword" type="password" name="password"
                  ng-validation="validation.newPassword"></cr-text>
-        <p class="cr-error" ng-show="validation.newPassword.valid == false && noSubmitYet == false">
-            {{'account.errorMessage.password' | translate}}</p>
+        <p class="cr-error" ng-show="validation.newPassword.valid == false && noSubmitYet == false"  ng-bind-html="''account.errorMessage.password' | translate"></p>
     </cr-question>
     <cr-question label="account.info.repeatPassword">
         <cr-text ng-model="o.repeatPassword"type="password" name="password"
                  ng-validation="validation.repeatPassword"></cr-text>
-        <p class="cr-error" ng-show="validation.repeatPassword.valid == false && noSubmitYet == false">
-            {{'account.errorMessage.repeatPassword' | translate}}</p>
+        <p class="cr-error" ng-show="validation.repeatPassword.valid == false && noSubmitYet == false" ng-bind-html="''account.errorMessage.repeatPassword' | translate"></p>
     </cr-question>
 </div>
 <div class="modal-footer">
