--- a/app/assets/_cr-multi-text.less
+++ b/app/assets/_cr-multi-text.less
@@ -1,6 +1,22 @@
 
 .cr-multi-text {
     .cr-multi-text-input {
+
+        transition: all 0.1s linear;
+
+        border: none;
+        background: #ffffff;
+        outline: none;
+        border-radius: 0;
+        box-shadow: 0 0 0 1px #999999;
+        padding: 0.25em 0.5em;
+        height: 2em;
+
+        &:focus {
+            background: #ffffcc;
+            box-shadow: 0 0 0 3px #999999;
+        }
+
         min-width: 100%;
         max-width: 100%;
         width: 100%;
