translation + language in account

--- a/app/eu/factorx/citizens/angular/views/household/account/household-account.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/household-account.html
@@ -127,7 +127,7 @@
 
                     <i class="fa fa-caret-left fa-2x"></i>
                     <span>&nbsp;</span>
-                    <span ng-bind-html="'nav.back-to-action' | translate"></span>
+                    <span ng-bind-html="'nav.back-to-actions' | translate"></span>
 
                 </button>
 
